--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
-  <meta>
+  <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="author" content="Daniela Bohorquez"/>
-    <meta name="keywords" content="coffee house, drinks"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Creando una menu para cafeteria" />
+    <meta name="keywords" content="coffee house, drinks" />
+    <meta name="author" content="Daniela Bohorquez" />
     <title>The Coffee House at Tripleten</title>
-    <link rel="stylesheet" href="./pages/index.css"/>
-    <link rel="stylesheet" href="./vendor/normalize.css"/>
-    <link rel="shortcut icon" href="./favicon.ico.ico"/>
-    <link rel="stylesheet" href="./styles/style.css"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="stylesheet" href="./vendor/normalize.css" />
+    <link rel="shortcut icon" href="./favicon.ico" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="page">
       TESTING ....
-    <header class="header">
-    </header>
-    <main class="main">
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-    </main>
-    <footer class="footer"></footer>
+      <header class="header"></header>
+      <main class="main">
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+      </main>
+      <footer class="footer"></footer>
     </div>
   </body>
 </html>
