--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <div class="page">
       TESTING ....
       <header class="header"></header>
-      <main class="main">
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+      <main class="content">
+        <section class="recipes"></section>
+        <section class="reservation"></section>
+        <section class="menu"></section>
+        <section class="about"></section>
       </main>
       <footer class="footer"></footer>
     </div>
