--- a/index.html
+++ b/index.html
@@ -20,8 +20,54 @@
   </head>
   <body>
     <div class="page">
-      TESTING ....
-      <header class="header"></header>
+      <header class="header">
+        <nav class="nav">
+          <img
+            src="./images/logo_coffeeshop_dark.svg"
+            alt="Logo Tripleten"
+            class="nav__logo"
+          />
+          <ul class="nav__links">
+            <li>
+              <a class="nav__link">Recetas</a>
+            </li>
+            <li>
+              <a class="nav__link">Reservar una mesa</a>
+            </li>
+            <li>
+              <a class="nav__link">Menú</a>
+            </li>
+            <li>
+              <a class="nav__link">Contactos</a>
+            </li>
+          </ul>
+        </nav>
+        <h1 class="header__title">
+          <span class="header__span-accent">Café de especialidad</span>
+          en Triple Peaks
+        </h1>
+        <p class="header__description">
+          ¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café
+          para darte energía y una vibra acogedora que motivarán tu creatividad.
+        </p>
+        <img
+          src="./images/inside_coffee_shop.png"
+          alt="Coffee shop tripleten"
+          class="header__image"
+        />
+        <div class="header__footer">
+          <div class="header__paragraph">
+            <p class="header__hours">Horario</p>
+            <p>Lunes a Viernes (de 10:00 a 19:00)</p>
+            <p>Sábados y Domingos (de 11:00 a 18:00)</p>
+          </div>
+          <div class="header__paragraph">
+            <p class="header__address">
+              Avenida del Éxito 200, Ciudad Triple Peaks
+            </p>
+          </div>
+        </div>
+      </header>
       <main class="content">
         <section class="recipes"></section>
         <section class="reservation"></section>
