--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           />
           <ul class="nav__links">
             <li>
-              <a class="nav__link">Recetas</a>
+              <a href="#recipes" class="nav__link">Recetas</a>
             </li>
             <li>
               <a class="nav__link">Reservar una mesa</a>
@@ -56,30 +56,57 @@
           class="header__image"
         />
         <div class="header__footer">
-          <div class="header__footer header__paragraph">
-            <br>Horario</br>
-            <br>Lunes a Viernes (de 10:00 a 19:00)</br>
-            <br>Sábados y Domingos (de 11:00 a 18:00)</br>
+          <div class="header__footer header__address>
+            <ul class="header__footer-item">
+              <li>Horario</li>
+              <li>Lunes a Viernes (de 10:00 a 19:00)</li>
+              <li>Sábados y Domingos (de 11:00 a 18:00)</li>
+            </ul>
           </div>
           <div class="header__footer header__address">
-            <br>Avenida del Éxito 200, Ciudad Triple Peaks</br>
+            <ul class="header__footer-item">
+              <li>Avenida del Éxito 200, Ciudad Triple Peaks</li>
+            </ul>
           </div>
         </div>
       </header>
       <main class="content">
-        <section class="recipes">
+        <section id="recipes" class="recipes">
           <h2 class="recipes__title">Recetas</h2>
-          <p class="recipes__subtitle">Echa un vistazo a algunas de nuestras recetas para que elabores tu propio café.</p>
+          <p class="recipes__subtitle">
+            Echa un vistazo a algunas de nuestras recetas para que elabores tu
+            propio café.
+          </p>
           <div class="recipes__videos">
             <div class="recipes__video-item">
-              <iframe class="recipes__iframe" width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=1EBgJwOyJy-7VDP7" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-              <iframe class="recipes__iframe" width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=vMSmBmRA9M2qRNHo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe
+                class="recipes__iframe"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=1EBgJwOyJy-7VDP7"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+              <div class="recipes__video-caption">
+                <span>Receta en Aeropress</span>
+                <span>~5 min</span>
+              </div>
             </div>
-            <div class="video__caption">
-              <p>Receta en Aeropress</p>
-              <p>~5 min</p>
-              <p>Receta en cafetera francesa</p>
-              <p>~15 min</p>
+            <div class="recipes__video-item">
+              <iframe
+                class="recipes__iframe"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/st571DYYTR8?si=vMSmBmRA9M2qRNHo"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+              <div class="recipes__video-caption">
+                <span>Receta en cafetera francesa</span>
+                <span>~15 min</span>
+              </div>
             </div>
           </div>
         </section>
