--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           class="header__image"
         />
         <div class="header__footer">
-          <div class="header__footer header__address>
+          <div class="header__footer header__hours">
             <ul class="header__footer-item">
               <li>Horario</li>
               <li>Lunes a Viernes (de 10:00 a 19:00)</li>
