--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
               <a href="#recipes" class="nav__link">Recetas</a>
             </li>
             <li>
-              <a class="nav__link">Reservar una mesa</a>
+              <a href="#reservation" class="nav__link">Reservar una mesa</a>
             </li>
             <li>
-              <a class="nav__link">Menú</a>
+              <a href="#menu" class="nav__link">Menú</a>
             </li>
             <li>
-              <a class="nav__link">Contactos</a>
+              <a href="#contacts" class="nav__link">Contactos</a>
             </li>
           </ul>
         </nav>
@@ -110,9 +110,9 @@
             </div>
           </div>
         </section>
-        <section class="reservation"></section>
-        <section class="menu"></section>
-        <section class="about"></section>
+        <section id="reservation" class="reservation"></section>
+        <section id="menu" class="menu"></section>
+        <section id="contacts" class="about"></section>
       </main>
       <footer class="footer"></footer>
     </div>
