--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <h2 class="reservation__title">Reservar una mesa</h2>
           <div class="reservation__form">
             <div class="reservation__form form__admin">
-              <form class="form__container">
+              <form class="form form__container">
                 <div class="form__main-container">
                   <fieldset class="form__container form__container_information">
                     <label for="name" class="form__label">Nombre *</label>
