--- a/index.html
+++ b/index.html
@@ -163,7 +163,87 @@
             </div>
           </form>
         </section>
-        <section id="menu" class="menu"></section>
+        <section id="menu" class="menu">
+          <h2 class="menu__title">Menú</h2>
+          <p class="menu__subtitle">
+            Elaboramos nuestro café con granos certificados de comercio justo,
+            tostados localmente, <br />y usamos tazas biodegradables. Todos los
+            tés de nuestra colección a $2/taza.
+          </p>
+          <div class="menu__cards">
+            <div class="card">
+              <div class="card card__title">De filtro</div>
+              <ul class="card__content">
+                <li class="card__list-item">
+                  Regular (350 ml)
+                  <span class="card__list-divider"></span>$1
+                </li>
+                <li class="card__list-item">
+                  Grande (470 ml)
+                  <span class="card__list-divider"></span>$1.25
+                </li>
+                <li class="card__list-item">
+                  XL (590 ml)
+                  <span class="card__list-divider"></span>$1.5
+                </li>
+                <li class="card__list-item">
+                  Tamaño familiar (700 ml, descafeinado)
+                  <span class="card__list-divider"></span>$1.75
+                </li>
+                <li class="card__list-item">
+                  Café helado (470 ml)
+                  <span class="card__list-divider"></span>$1.25
+                </li>
+              </ul>
+              <div class="card card__title">Espresso</div>
+              <ul class="card__content">
+                <li class="card__list-item">
+                  Macchiato
+                  <span class="card__list-divider"></span>$2.25
+                </li>
+                <li class="card__list-item">
+                  Cortado
+                  <span class="card__list-divider"></span>$2.5
+                </li>
+                <li class="card__list-item">
+                  Mocha
+                  <span class="card__list-divider"></span>$3
+                </li>
+                <li class="card__list-item">
+                  Amanecer en Bay Area (descafeinado)
+                  <span class="card__list-divider"></span>$10
+                </li>
+              </ul>
+              <div class="card card__title">Repostería</div>
+              <ul class="card__content">
+                <li class="card__list-item">
+                  Croissant de almendra
+                  <span class="card__list-divider"></span>$2
+                </li>
+                <li class="card__list-item">
+                  Pan de banana
+                  <span class="card__list-divider"></span>$1.75
+                </li>
+                <li class="card__list-item">
+                  Tarta de limón
+                  <span class="card__list-divider"></span>$3
+                </li>
+                <li class="card__list-item">
+                  Pastel Blue velvet
+                  <span class="card__list-divider"></span>$3.75
+                </li>
+                <li class="card__list-item">
+                  Cookie web
+                  <span class="card__list-divider"></span>$2
+                </li>
+                <li class="card__list-item">
+                  Baguette fresco
+                  <span class="card__list-divider"></span>$0.25
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
         <section id="contacts" class="about"></section>
       </main>
       <footer class="footer"></footer>
