--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
           </p>
           <div class="menu__cards">
             <div class="card">
-              <div class="card card__title">De filtro</div>
-              <ul class="card__content">
+              <ul class="card__content card__content_size">
+                <li class="card__title">De filtro</li>
                 <li class="card__list-item">
                   Regular (350 ml)
                   <span class="card__list-divider"></span>$1
@@ -195,8 +195,8 @@
                   <span class="card__list-divider"></span>$1.25
                 </li>
               </ul>
-              <div class="card card__title">Espresso</div>
-              <ul class="card__content">
+              <ul class="card__content card__content_type">
+                <li class="card__title">Espresso</li>
                 <li class="card__list-item">
                   Macchiato
                   <span class="card__list-divider"></span>$2.25
@@ -214,8 +214,8 @@
                   <span class="card__list-divider"></span>$10
                 </li>
               </ul>
-              <div class="card card__title">Repostería</div>
-              <ul class="card__content">
+              <ul class="card__content card__content_flavour">
+                <li class="card__title">Repostería</li>
                 <li class="card__list-item">
                   Croissant de almendra
                   <span class="card__list-divider"></span>$2
