--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           </p>
           <div class="menu__cards">
             <div class="card">
-              <ul class="card__content card__content_size">
+              <ul class="card card__content_size">
                 <li class="card__title">De filtro</li>
                 <li class="card__list-item">
                   Regular (350 ml)
@@ -195,7 +195,9 @@
                   <span class="card__list-divider"></span>$1.25
                 </li>
               </ul>
-              <ul class="card__content card__content_type">
+            </div>
+            <div class="card">
+              <ul class="card card__content_type">
                 <li class="card__title">Espresso</li>
                 <li class="card__list-item">
                   Macchiato
@@ -214,7 +216,9 @@
                   <span class="card__list-divider"></span>$10
                 </li>
               </ul>
-              <ul class="card__content card__content_flavour">
+            </div>
+            <div class="card">
+              <ul class="card card__content_flavour">
                 <li class="card__title">Repostería</li>
                 <li class="card__list-item">
                   Croissant de almendra
