--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@
           <h2 class="menu__title">Menú</h2>
           <p class="menu__subtitle">
             Elaboramos nuestro café con granos certificados de comercio justo,
-            tostados localmente, <br />y usamos tazas biodegradables. Todos los
-            tés de nuestra colección a $2/taza.
+            tostados localmente, y usamos tazas biodegradables. Todos los tés de
+            nuestra colección a $2/taza.
           </p>
           <div class="menu__cards">
             <div class="card">
-              <ul class="card card__content_size">
-                <li class="card__title">De filtro</li>
+              <h3 class="card__title">De filtro</h3>
+              <ul class="card__content">
                 <li class="card__list-item">
                   Regular (350 ml)
                   <span class="card__list-divider"></span>$1
@@ -197,8 +197,8 @@
               </ul>
             </div>
             <div class="card">
-              <ul class="card card__content_type">
-                <li class="card__title">Espresso</li>
+              <h3 class="card__title">Espresso</h3>
+              <ul class="card__content">
                 <li class="card__list-item">
                   Macchiato
                   <span class="card__list-divider"></span>$2.25
@@ -218,8 +218,8 @@
               </ul>
             </div>
             <div class="card">
-              <ul class="card card__content_flavour">
-                <li class="card__title">Repostería</li>
+              <h3 class="card__title">Repostería</h3>
+              <ul class="card__content">
                 <li class="card__list-item">
                   Croissant de almendra
                   <span class="card__list-divider"></span>$2
