--- a/index.html
+++ b/index.html
@@ -268,7 +268,42 @@
           <div class="about__circle"></div>
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__content">
+          <div class="logo">
+            <img
+              src="./images/logo_coffeeshop_light.svg"
+              alt="Logo tripleten white"
+              class="footer__logo"
+            />
+          </div>
+          <div class="footer__social">
+            <h2 class="footer__social-heading">Redes sociales</h2>
+            <ul class="footer__list">
+              <il class="footer__list-item">
+                <a class="footer__social-link" href="#">
+                  <img
+                    src="./images/facebook_white.svg"
+                    alt="Facebook logo"
+                    class="footer__social-icon"
+                  />Facebook
+                </a>
+              </il>
+              <il class="footer__list-item">
+                <a class="footer__social-link" href="#">
+                  <img
+                    src="./images/instagram_white.svg"
+                    alt="Instagram logo"
+                    class="footer__social-icon"
+                  />Instagram</a
+                >
+              </il>
+            </ul>
+          </div>
+        </div>
+        <p class="footer__copyright">&copy; 2023 Daniela Bohorquez</p>
+      </footer>
+    </div>
     </div>
   </body>
 </html>
