--- a/index.html
+++ b/index.html
@@ -270,17 +270,16 @@
       </main>
       <footer class="footer">
         <div class="footer__content">
-          <div class="logo">
+          <div class="footer__logo">
             <img
               src="./images/logo_coffeeshop_light.svg"
               alt="Logo tripleten white"
-              class="footer__logo"
             />
           </div>
           <div class="footer__social">
             <h2 class="footer__social-heading">Redes sociales</h2>
             <ul class="footer__list">
-              <il class="footer__list-item">
+              <li class="footer__list-item">
                 <a class="footer__social-link" href="#">
                   <img
                     src="./images/facebook_white.svg"
@@ -288,8 +287,8 @@
                     class="footer__social-icon"
                   />Facebook
                 </a>
-              </il>
-              <il class="footer__list-item">
+              </li>
+              <li class="footer__list-item">
                 <a class="footer__social-link" href="#">
                   <img
                     src="./images/instagram_white.svg"
@@ -297,13 +296,12 @@
                     class="footer__social-icon"
                   />Instagram</a
                 >
-              </il>
+              </li>
             </ul>
           </div>
         </div>
         <p class="footer__copyright">&copy; 2023 Daniela Bohorquez</p>
       </footer>
-    </div>
     </div>
   </body>
 </html>
